--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NCSU  Chess Club September Stalemate</title>
+    <title>NCSU Chess Club April Gambit</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,8 +19,8 @@
     </style>
 </head>
 <body>
-    <h1>NCSU Chess Club September Stalemate</h1>
-    <p>Come join us for the NCSU September Stalemate! This chess tournament will take place on NCSU campus, at <strong>111 Lampe Drive, Room 371 </strong> on September 21, 2024. This tournament is open to anyone over the age of 18!</p>
+    <h1>NCSU Chess Club April Gambit</h1>
+    <p>Come join us for the NCSU April Gambit! This chess tournament will take place on NCSU campus, at <strong>Talley Student Union Room 4280 </strong> on April 13, 2025. This tournament is open to anyone over the age of 18!</p>
 
     <!-- Add the link to the spreadsheet here -->
     <p><a href="https://docs.google.com/spreadsheets/d/1Uxlcx-HLb_8WqLPKy5VB4gJnTLQ-1ZTDR1kRwCRJT_8/edit?usp=sharing" target="_blank">Entries</a></p>
@@ -36,19 +36,19 @@
         <li>Byes: Players are permitted to take one half-point bye. Any subsequent byes will be zero points. Must be requested before Round 1 starts. Round 3 byes are automatically zero points.</li>
     </ul>
 
-    <p>Please fill out this form to sign up: <a href="https://tinyurl.com/y93du2hs">https://tinyurl.com/y93du2hs</a></p>
+    <p>Please fill out this form to sign up: <a href="https://tinyurl.com/236mf62n">https://tinyurl.com/236mf62n</a></p>
 
-    <p>No entries will be accepted after 9:30am on September 21.</p>
+    <p>No entries will be accepted after 9:30am on April 13.</p>
     
-    <p>We encourage players to bring their own boards, sets, and clocks. Notation materials will be provided. Email <a href="mailto:sasampa2@ncsu.edu">sasampa2@ncsu.edu</a> with any further questions!</p>
+    <p>We encourage players to bring their own boards, sets, and clocks. Notation materials will be provided. Email <a href="mailto:chessteam.ncsu@gmail.com">chessteam.ncsu@gmail.com</a> with any further questions!</p>
 
     <!-- Link to the PDF and Image with relative paths -->
-    <a href="September Stalemate2.pdf" target="_blank">
+    <a href="Update me loser" target="_blank">
         <img src="September Stalemate2.pdf" alt="September Stalemate">
     </a>
 
     <!-- Link to the photos on Google Drive -->
     <h2>Event Photos:</h2>
-    <p>Check out the photos from the event: <a href="https://drive.google.com/drive/folders/1TZJXnkH-tPSSVAcK7ATpvrHw2QLED0Yj" target="_blank">Event Photos</a></p>
+    <p>Check out the photos from the past event: <a href="https://drive.google.com/drive/folders/1TZJXnkH-tPSSVAcK7ATpvrHw2QLED0Yj" target="_blank">Event Photos</a></p>
 </body>
 </html>
