--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
     <!-- Link to the photos on Google Drive -->
     <h2>Event Photos:</h2>
     <p>Check out the photos from the past event: <a href="https://drive.google.com/drive/folders/1TZJXnkH-tPSSVAcK7ATpvrHw2QLED0Yj" target="_blank">Event Photos</a></p>
+    <p>Check back a week after the event for this semester's photos!</p>
 </body>
 </html>
