--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- Link to the PDF and Image with relative paths -->
     <a href="Update me loser" target="_blank">
-        <img src="September Stalemate2.pdf" alt="September Stalemate">
+        <img src="AprilGambit.jpeg" alt="April Gambit">
     </a>
 
     <!-- Link to the photos on Google Drive -->
